[package]
name = "dmdiag"
version = "0.1.0"
authors = ["William Wallace <me@wiox.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicorn-engine = "2.0.0-rc7"
minidump = { git = "https://github.com/rust-minidump/rust-minidump" }
zydis = "3.0"
memmap2 = "0.5.3"